--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -258,8 +258,8 @@
                 <Grid Name="QuickViewGrid" BorderThickness="0 0 0 0" Background="WhiteSmoke">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="40"/>
@@ -312,7 +312,7 @@
                         
                     </Grid>
 
-                    <Grid Name="QuickView2" Background="White" BorderBrush="#EEEEEE" BorderThickness="0"  Grid.Row="1" Grid.Column="1">
+                    <Grid Name="QuickView2" MaxHeight="400" Background="White" BorderBrush="#EEEEEE" BorderThickness="0"  Grid.Row="1" Grid.Column="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
@@ -340,7 +340,7 @@
                         </ListView>
                     </Grid>
 
-                    <Grid Name="QuickView3" Background="White" BorderBrush="#EEEEEE" BorderThickness="0" Grid.Row="2" Grid.Column="1">
+                    <Grid Name="QuickView3" MaxHeight="400" Background="White" BorderBrush="#EEEEEE" BorderThickness="0" Grid.Row="2" Grid.Column="1">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="30"/>
                             <RowDefinition Height="*"/>
@@ -390,7 +390,7 @@
           <Grid  Padding="0 0 0 0" Grid.Row="2" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="40"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
               
             <Grid Name="OpenCandidatePanelButtonGrid" Grid.Column="0">
@@ -401,10 +401,15 @@
             <StackPanel Padding="5 5 0 5" Orientation="Horizontal" Grid.Column="1" Name="CandidatePanelStackPanel" Visibility="Collapsed">
                 <TextBlock Name="CandidatePanelTextBlock" FontSize="16" Foreground="Gray" VerticalAlignment="Center">Are you looking for:</TextBlock>
 
-                <ListView Grid.Column="2" Padding="0 0 0 0" x:Name="candidatePhenoListView" ItemsSource="{x:Bind PhenoMana.phenotypesCandidates, Mode=OneWay}">
+                <ListView Grid.Column="2" Padding="0 0 0 0" Width="800"
+                          ScrollViewer.HorizontalScrollMode="Enabled"
+                          ScrollViewer.VerticalScrollMode="Disabled"
+                          ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+                          ScrollViewer.IsHorizontalRailEnabled="True"
+                          x:Name="candidatePhenoListView" ItemsSource="{x:Bind PhenoMana.phenotypesCandidates, Mode=OneWay}">
                     <ListView.ItemsPanel>
                         <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal"  Padding="0"/>
+                            <VirtualizingStackPanel  Orientation="Horizontal"/>
                         </ItemsPanelTemplate>
                     </ListView.ItemsPanel>
                     <ListView.ItemTemplate>
