--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -432,8 +432,7 @@
                                    MaxWidth="{Binding ElementName=Splitter, Path=ActualWidth}" Margin="10,10,10,10" TextWrapping="Wrap"  />
             </Border>
 
-            <TextBlock Visibility="Collapsed" Name="pageIndexTextBlock" RelativePanel.Above="cmdBar" RelativePanel.AlignRightWithPanel="True" Text=""/>
-            <StackPanel Name="AnnoPhenoStackPanel" RelativePanel.Above="cmdBar" RelativePanel.AlignLeftWithPanel="True" Orientation="Horizontal"/>
+          
             
             <!-- Photo service -->
             <!--
@@ -527,7 +526,7 @@
 
             <CommandBar Padding="0 0 0 0" Visibility="Visible"
                         Width="Auto" Height="Auto"
-                        RelativePanel.AlignRightWithPanel="True" RelativePanel.Above="showTextGrid"
+                        RelativePanel.AlignRightWithPanel="True" RelativePanel.AlignBottomWithPanel="True"
                         OverflowButtonVisibility="Collapsed" Background="{StaticResource TITLE_BAR_WHITE}"
                         Canvas.ZIndex="999"
                         x:Name="controlCmdBar"
@@ -558,19 +557,21 @@
                 </AppBarToggleButton>
             </CommandBar>
 
+            <!--
             <Grid Height="40" Width="90" Padding="0 0 0 0" Background="WhiteSmoke" Name="showTextGrid" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True">
                 <Image  Visibility="Collapsed" Name="printImage" Width="70" Source="Assets/abc_print.png" VerticalAlignment="Center" HorizontalAlignment="Center" Opacity="0.3"/>
                 <Image  Name="writeImage" Width="70" Source="Assets/abc_write.png" VerticalAlignment="Center" HorizontalAlignment="Center" Opacity="0.3"/>
             </Grid>
-
-            <TextBlock x:Name="modeTextBlock" Margin="0 0 10 0" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True" Padding=" 0 0 10 0" FontSize="25" FontFamily="Segoe UI" FontWeight="ExtraBold" Foreground="LightGray" Opacity="0.5">Handwriting Mode</TextBlock>
+-->
+            
+            <TextBlock x:Name="modeTextBlock" Width="240" HorizontalTextAlignment="Right" Margin="0 0 10 0" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True" Padding=" 0 0 10 0" FontSize="25" FontFamily="Segoe UI" FontWeight="ExtraBold" Foreground="LightGray" Opacity="0.5">Handwriting Mode</TextBlock>
 
             <StackPanel  Name="pageIndexPanel"  Margin="0 0 0 40" Orientation="Horizontal" RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0 5 22 0">
                 <Button Height="30" Width="30" Padding="0 0 0 0" Background="WhiteSmoke"  Click="AddPageButton_Click">
                     <SymbolIcon Symbol="Add" Foreground="{StaticResource Button_Background}" />
                 </Button>
             </StackPanel>
-            <TextBlock Name="cmdBarTextBlock" Margin="12,14" RelativePanel.AlignLeftWithPanel="True" RelativePanel.Above="showTextGrid"
+            <TextBlock Name="cmdBarTextBlock" Margin="12,14" RelativePanel.AlignRightWithPanel="True" RelativePanel.Above="controlCmdBar"
                                Text=""
                                Visibility="Visible"/>
             <CommandBar RelativePanel.AlignBottomWithPanel="True"
