--- a/PhenoPad/MainPage.xaml
+++ b/PhenoPad/MainPage.xaml
@@ -107,7 +107,7 @@
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
-                    <ColumnDefinition Width="200"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <StackPanel Orientation="Horizontal" Grid.Column="0" >
                     <Button Name="BackButton" Click="BackButton_Click" Width="40"  Background="{StaticResource Button_Background}" BorderThickness="0" VerticalAlignment="Stretch">
@@ -224,6 +224,36 @@
                 </InkToolbar>
 
                 <CommandBar Grid.Column="4" OverflowButtonVisibility="Collapsed" Background="{StaticResource TITLE_BAR_WHITE}">
+                    <AppBarButton Name="serverConnectButton" Icon="Globe" Label="Server" 
+                              Click="ServerConnectButton_Click" IsEnabled="True">
+                        <AppBarButton.Flyout>
+                            <Flyout>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="3*"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+
+                                    <TextBlock Grid.Row="0" Grid.Column="0" Text="Bluetooth"/>
+                                    <TextBlock Grid.Row="1" Grid.Column="0" Text="Recognition"/>
+                                    <TextBlock Grid.Row="2" Grid.Column="0" Text="Diarization"/>
+
+                                    <ProgressRing Grid.Row="0" Grid.Column="1" Name="BluetoothProgress" IsActive="True"/>
+                                    <ProgressRing Grid.Row="1" Grid.Column="1" Name="RecognitionProgress" IsActive="True"/>
+                                    <ProgressRing Grid.Row="2" Grid.Column="1" Name="DiarizationProgress" IsActive="True"/>
+                                </Grid>
+                            </Flyout>
+                        </AppBarButton.Flyout>
+                        <ToolTipService.ToolTip>
+                            <TextBlock Text="Connect to server"/>
+                        </ToolTipService.ToolTip>
+                    </AppBarButton>
                     <AppBarButton  Name="SaveButton" Icon="Save" Label="Save notes" Click="SaveButton_Click">
                         <ToolTipService.ToolTip>
                             <TextBlock Text="Enter full screen mode."/>
@@ -474,30 +504,30 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Text="Audio" Grid.Row="0" Grid.Column="0"
+                <TextBlock Text="Audio" Grid.Row="1" Grid.Column="0"
                            VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 <ToggleSwitch   Name="audioSwitch"
                                 Margin="5" Width="100" FlowDirection="LeftToRight"
                                 IsOn="{x:Bind AudioOn, Mode=TwoWay}"
                               OffContent="Record" OnContent="Disconnect"
-                              Grid.Row="0" Grid.Column="1" RequestedTheme="Default"
+                              Grid.Row="1" Grid.Column="1" RequestedTheme="Default"
                               Toggled="AudioToggleSwitch_Toggled"/>
 
-                <TextBlock Text="Video" Grid.Row="1" Grid.Column="0"
+                <TextBlock Text="Video" Grid.Row="2" Grid.Column="0"
                            VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 <ToggleSwitch   Name="videoSwitch"
                                 Margin="5" Width="100" FlowDirection="LeftToRight"
                                 IsOn="{x:Bind VideoOn, Mode=TwoWay}"
                               OffContent="Record" OnContent="Stop"
-                              Grid.Row="1" Grid.Column="1" RequestedTheme="Default"
+                              Grid.Row="2" Grid.Column="1" RequestedTheme="Default"
                               Toggled="VideoToggleSwitch_Toggled" IsEnabled="False"/>
 
-                <TextBlock Text="Camera" Grid.Row="2" Grid.Column="0"
+                <TextBlock Text="Camera" Grid.Row="3" Grid.Column="0"
                            VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 <Button Name="cameraButton"
                         Margin="1" FlowDirection="LeftToRight"
                         Content="Snap a photo"
-                        Grid.Row="2" Grid.Column="1" RequestedTheme="Default"
+                        Grid.Row="3" Grid.Column="1" RequestedTheme="Default"
                         VerticalAlignment="Center" HorizontalAlignment="Center"
                               Click="CameraButton_Click" IsEnabled="False"/>
             
@@ -529,7 +559,7 @@
                         >
 
                 <AppBarToggleButton Name="testButton" Icon="Microphone" Label="Speech Recognition" Click="AudioStreamButton_Clicked"
-                                    IsChecked="{x:Bind AudioOn, Mode=TwoWay}">
+                                    IsChecked="{x:Bind AudioOn, Mode=TwoWay}" IsEnabled="False">
                     <ToolTipService.ToolTip>
                         <TextBlock Text="Enable/Disable audio recording"/>
                     </ToolTipService.ToolTip>
